hphp/test/zend/good/ext/json/tests/bug41403.php.skipif
<?php

if (!extension_loaded('json')) die('skip'); 

if (setlocale(LC_NUMERIC, "de_DE") === false) {
	die("skip no de_DE locale");
}
?>