hphp/test/zend/bad/ext/pdo/tests/pecl_bug_5809.php.skipif
<?php # vim:ft=php:
if (!extension_loaded('pdo')) die('skip');
$dir = getenv('REDIR_TEST_DIR');
if (false == $dir) die('skip no driver');
require_once $dir . 'pdo_test.inc';
PDOTest::skip();
?>